Changes implementing overrides and recalculation of that month. Temporal changes
