# src/api/swaggerV5.yaml
@@ -297,6 +297,11 @@ paths:
           description: XXX
           required: false
           type: string
+        - name: forceUpdate
+          in: query
+          description: XXX
+          required: false
+          type: boolean
       responses:
         '200':
           description: Success
